<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        >


    </androidx.viewpager.widget.ViewPager>
    <Button
        android:id="@+id/button"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_marginLeft="160dip"
        android:background="@drawable/shape"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:text="+"
        android:textSize="25dp"
        android:layout_gravity="center"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:background="#AFEEEE"
        android:layout_weight="2" />



    <!--
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp" >

        <CalendarView
            android:id="@+id/calendarViewId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </RelativeLayout>
    -->

</LinearLayout>